--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,13 @@
     <string name="book_a_table">Book a Table</string>
     <string name="view_pay">View pay</string>
     <string name="booking_history">Booking History</string>
+    <string name="current_city">Current city:</string>
+    <string name="move_a_table">Move a table</string>
+    <string name="from">From</string>
+    <string name="to">to</string>
+    <string name="service">Service</string>
+    <string name="complaints">Complaint</string>
+    <string name="complaints_hint">Maximum 400 character only.</string>
+
+
 </resources>
