--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,8 +55,18 @@
     <string name="bill_date">Bill Date</string>
     <string name="bill_no">Bill No</string>
     <string name="Order_id">Order ID</string>
-    <string name="title_menu">Menu</string>
+    <string name="title_menu">Menus</string>
     <string name="bill_summary">Bill Summary</string>
 
+    <string name="checkout">Check Out</string>
+    <string name="offer_banner">"Shop for 2000 to get Rs 100 discount and shop for 3000 to get Rs 200 discount"</string>
+    <!--internet connection Values-->
+    <string name="internet_connection">"You need a network connection to use this application. Please turn on mobile network or Wi-Fi in Settings.</string>
+    <string name="titleMsg">Unable to connect</string>
+    <string name="settings">Settings</string>
+    <string name="button">Cancel</string>
+    <string name="offline_message">Offline data!</string>
+    <string name="no_internet_message">No internet connection!</string>
+    <string name="go_online">Go Online</string>
 
 </resources>
