--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="restartung_selection_message">Please Select the restaurant</string>
+    <string name="restartung_selection_message">Please Select the Restaurant.</string>
 
 
     <string name="action_settings">Settings</string>
