--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,9 +25,9 @@
 
     <string name="address">Address</string>
     <string name="price_summary">Price Summary</string>
-    <string name="items">Items (20)        </string>
+    <string name="items">Items (20)    </string>
     <string name="charges">Taxes       </string>
-    <string name="estimated_total">Estimated Total</string>
+    <string name="estimated_total">Estimated Total   </string>
     <string name="proceed">proceed to Checkout</string>
     <string name="place_order">Place Order</string>
     <string name="item_summary">Item Summary</string>
@@ -75,4 +75,9 @@
     <string name="togo">To-Go</string>
     <string name="bar">Bar</string>
     <string name="take_away">Take Away</string>
+    <string name="error">An Error has Occurred</string>
+    <string name="coln"> :</string>
+    <string name="select_a_table">Select A Table</string>
+    <string name="table_no">Table No.</string>
+    <string name="payment_msg">Please make Payment before selecting another restaurant.</string>
 </resources>
