--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="restartung_selection_message">Please select a restaurant.</string>
 
 
+
+    <string name="order_confirmation_message">Thank you, we have received your order.</string>
+    <string name="order_missing_message">Order is not yet placed.</string>
+
     <string name="action_settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
@@ -79,6 +83,57 @@
     <string name="coln"> :</string>
     <string name="select_a_table">Select A Table</string>
     <string name="table_no">Table No.</string>
+    <string name="enter_table_no">Enter table no:</string>
+    <string name="View_Menu">View Menu</string>
     <string name="payment_msg">Please make Payment before selecting another restaurant.</string>
     <string name="service_request_table_msg">You can\'t place a request for To-Go and Bar</string>
+
+    <string name="select_the_table">Please Select Table Number.</string>
+    <string name="service_type_msg">Please Select Service Type.</string>
+    <string name="Date">Date</string>
+    <string name="Rest.Name">Rest. Name</string>
+    <string name="OrderID">Order ID</string>
+    <string name="Description">Description</string>
+    <string name="TableNo">Table No</string>
+    <string name="Amount">Amount</string>
+    <string name="Quantity">Quantity</string>
+    <string name="Status">Status</string>Bill Amount
+
+    <string name="Bill_Amount">Bill Amount</string>
+    <string name="BillNo">Bill No</string>
+    <string name="BookingID">Booking ID</string>
+    <string name="Ordertotal">Order total</string>
+
+
+
+    <string name="Menu">Menu</string>
+    <string name="Restaurant_List">Restaurant List</string>
+    <string name="view_pay_bill">View  &amp; Pay Bill</string>
+
+    <string name="View_Order">View Order</string>
+    <string name="Sydney">Sydney</string>
+    <string name="loading">Loading...</string>
+    <string name="Alert">Alert</string>
+    <string name="please_select_one_item">Please Select One Item.</string>
+    <string name="item_cart">Items in Cart</string>
+    <string name="plus_taxes">Plus taxes</string>
+    <string name="no_order_items">No Order Details Found.</string>
+    <string name="Payment_Confirmation">Payment Confirmation</string>
+    <string name="payment_summary">Payment Summary</string>
+    <string name="total_before_tax">Total Before Tax</string>
+    <string name="Breakfast">Breakfast</string>
+    <string name="Lunch">Lunch</string>
+    <string name="Allday">Allday</string>
+    <string name="Dinner">Dinner</string>
+    <string name="heading">Heading</string>
+    <string name="No_Items_Found">No Items Found...</string>
+    <string name="please_enter_table_no">Please enter the Table no</string>
+    <string name="server_error">Server Error.</string>
+    <string name="select_payment_type">Please Select Payment Type.</string>
+    <string name="promo_not_avialble">\"Promo code not available</string>
+    <string name="payment_failed">Payment Failed</string>
+    <string name="error_encounted">Ërror has Encounterd</string>
+    <string name="no_data">No Data</string>
+    <string name="item_removed">Item removed</string>
+    <string name="Special">Special</string>
 </resources>
